syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.demo.bookshop.grpc";
option java_outer_classname = "CatalogueProto";

package book;

import "google/protobuf/empty.proto";

service Catalogue {
  rpc GetBook (GetBookRequest) returns (GetBookResponse) {}
  rpc ListBooks (google.protobuf.Empty) returns (ListBooksResponse) {}
}

message GetBookRequest {
  int32 id = 1;
}

message GetBookResponse {
  Book book = 1;
}

message ListBooksResponse {
  repeated Book books = 1;
}

message Book {
  int32 id = 1;
  string title = 2;
  string author = 3;
  int32 price = 4;
}
